test/fixtures/mutating_webhooks/ingress_hook.yml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    name: ingress-webhook-configuration
  webhooks:
  - admissionReviewVersions:
    - v1beta1
    clientConfig:
      caBundle: BUNDLE
      service:
        name: boss
        namespace: boss
        path: /boss
        port: 443
    failurePolicy: Ignore
    matchPolicy: Exact
    name: ingress-hook.admission.test
    namespaceSelector:
      matchExpressions:
      - key: control-plane
        operator: DoesNotExist
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - extensions
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - ingresses
      scope: '*'
    sideEffects: Unknown
    timeoutSeconds: 30
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
